--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,8 +5,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN',
-    'Hiragino Sans', Meiryo, sans-serif;
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
 a {
