--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: 'Helvetica Neue', 'Helvetica', 'Arial', 'Noto Sans JP',
+    sans-serif;
 }
 
 a {
